# redb-open

./: .gitignore  .golangci-v2.yml  .golangci.yml  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE-COMMERCIAL.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum
.github/: CODEOWNERS  EMERGENCY_PROCEDURES.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  WORKFLOW_OVERVIEW.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  database_adapter_request.md  documentation_request.md  feature_request.md  general_issue.md
.github/community/: CODE_OF_CONDUCT.md  SUPPORT.md
.github/workflows/: branch-protection.yml  build.yml  lint.yml  test.yml
api/: go.mod
cmd/cli/: go.mod  go.sum
cmd/cli/cmd/: auth.go  branches.go  clean.go  commands.go  commits.go  completion.go  databases.go  environments.go  instances.go  main.go  mappings.go  mcpresources.go  mcpservers.go  mcptools.go  mesh.go  profiles.go  regions.go  relationships.go  repos.go  setup.go  streams.go  tenants.go  transformations.go  users.go  (+1 more)
cmd/supervisor/: go.mod  go.sum
docs/: ADDING_NEW_DATABASE_SUPPORT.md  ADD_NEW_DATABASE_CDC.md  ANCHOR.md  ARCHITECTURE.md  CLI_INTERACTIVE_MODE.md  CLI_REFERENCE.md  DASHBOARD.md  DATABASE_ADAPTER_FILE_STRUCTURE.md  DATABASE_ADAPTER_IMPLEMENTATION_GUIDE.md  DATABASE_SUPPORT.md  ENTERPRISE_DATABASE_SETUP.md  INSTALL.md  MCP_SERVER_MANAGEMENT.md  MULTI_INSTANCE_CONFIGURATION.md  RELATIONSHIPS_IMPLEMENTATION.md  RESOURCE_ADDRESSING.md  STREAM.md  STREAM_ADAPTER_IMPLEMENTATION_GUIDE.md  UNIFIED_MODEL.md
pkg/: README.md  go.mod  go.sum
pkg/config/: config.go
pkg/configprovider/: interfaces.go
pkg/database/: credentials.go  postgres.go  redis.go
pkg/dbcapabilities/: capabilities.go  connection_parser.go  connection_parser_test.go  doc.go  host_utils.go
pkg/encryption/: encryption.go
pkg/grpc/: grpcclient.go
pkg/grpcconfig/: grpcconfig.go
pkg/health/: health.go
pkg/keyring/: keyring.go
pkg/logger/: logger.go
pkg/metadata/: metadata.go
pkg/models/: models.go  resources.go  virtual_resources.go
pkg/service/: base.go  controller.go  metrics.go
pkg/streamcapabilities/: capabilities.go  doc.go  helpers.go
pkg/syslog/: syslog.go
pkg/unifiedmodel/: README.md  UNIFIED_MODEL_OBJECTS.md  classification.go  comparison.go  context.go  conversion_engine.go  conversion_matrix.go  conversion_utils.go  database_capabilities.go  database_features.go  database_metadata.go  database_metadata_registry.go  detection_levels.go  enrichment.go  enrichment_utils.go  generator.go  helpers.go  metrics.go  metrics_utils.go  navigator.go  paradigm_conversion.go  protobuf_conversion.go  sample_data.go  sample_data_utils.go  type_conversion.go  type_conversion_test.go  unifiedmodel.go  user_context.go  user_context_utils.go
sample_config/: config.yaml  config_docker.yaml  example-config-node1.yaml  example-config-node2.yaml  example_config_instance_2.yaml
scripts/: DATABASE_SCHEMA.sql
services/anchor/: go.mod  go.sum
services/clientapi/: go.mod  go.sum
services/core/: go.mod  go.sum
services/integration/: go.mod  go.sum
services/mcpserver/: README.md  go.mod  go.sum
services/mesh/: Cargo.toml  MESH_REFACTOR_TARGET_STATE.md  README.md  REFACTOR_PLAN.md  go.mod  go.sum
services/mesh/cmd/: Cargo.toml  main.go
services/mesh/cmd/src/: config.rs  logging.rs  main.rs  supervisor.rs
services/mesh/grpc/: Cargo.toml  build.rs
services/mesh/grpc/src/: control.rs  data.rs  delivery.rs  event_notifier.rs  lib.rs  message_queue.rs  message_tracker.rs  metrics.rs  server.rs
services/mesh/internal/consensus/: group.go
services/mesh/internal/consensus/fsm/: fsm.go
services/mesh/internal/consensus/stores/: postgres_log_store.go  postgres_stable_store.go  redis_snapshot_store.go
services/mesh/internal/engine/: engine.go  server.go  service.go
services/mesh/internal/grpc/: consensus_service.go  management_service.go  mesh_service.go  server.go
services/mesh/internal/mesh/: connection.go  consensus.go  network.go  node.go  router.go  state_machine.go  websocket_adapter.go
services/mesh/internal/mesh/consensus/: consensus.go
services/mesh/internal/mesh/message/: message.go
services/mesh/internal/mesh/router/: router.go
services/mesh/internal/messages/: framing.go  types.go  validation.go
services/mesh/internal/monitoring/: health.go  health_test.go  metrics.go  metrics_test.go
services/mesh/internal/network/: message_handler.go  websocket.go
services/mesh/internal/routing/: router.go  router_test.go  strategies.go
services/mesh/internal/security/: credentials.go
services/mesh/internal/service/: mesh_service.go
services/mesh/internal/storage/: README.md  interface.go  interfaces.go  models.go  postgres.go
services/mesh/internal/transport/: interface.go
services/mesh/internal/transport/ws/: factory.go  frame.go  transport.go  virtuallink.go
services/mesh/routing/: Cargo.toml
services/mesh/routing/src/: ecmp.rs  lib.rs  next_hop.rs  router.rs  table.rs
services/mesh/session/: Cargo.toml
services/mesh/session/src/: failure_tracker.rs  handshake.rs  keepalive.rs  lib.rs  manager.rs  reliability.rs  session.rs  transport.rs
services/mesh/storage/: Cargo.toml
services/mesh/storage/src/: lib.rs
services/mesh/storage/src/backend/: file.rs  mem.rs  mod.rs  redis.rs
services/mesh/topology/: Cargo.toml
services/mesh/topology/src/: lib.rs  link_state.rs
services/mesh/topology/src/link_state/: database.rs
services/mesh/wire/: Cargo.toml
services/mesh/wire/examples/: basic_usage.rs
services/mesh/wire/src/: chunk.rs  codec.rs  error.rs  frame.rs  header.rs  lib.rs  topology.rs
services/queryapi/: go.mod  go.sum
services/security/: go.mod  go.sum
services/serviceapi/: go.mod  go.sum
services/stream/: go.mod
services/transformation/: go.mod
services/unifiedmodel/: go.mod  go.sum
services/webhook/: go.mod  go.sum
web/client-dashboard/: README.md  env.example  package-lock.json  package.json
web/dashboard/: README.md  env.example  eslint.config.mjs  package-lock.json  package.json
(+1034 files in other folders)
