[workspace]
resolver = "2"
members = [
    "services/mesh",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["redbco"]
license = "AGPLv3"
repository = "https://github.com/redbco/redb-open"
homepage = "https://github.com/redbco/redb-open"

[workspace.dependencies]
# Common dependencies that will be shared across crates
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

# Crypto dependencies
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
rand = "0.8"

# Storage dependencies
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
memmap2 = "0.9"
dashmap = "5.5"
async-trait = "0.1"
crc32fast = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = { version = "1.0", features = ["serde"] }

# Network dependencies
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
tonic-reflection = "0.12"

# Config dependencies
config = "0.14"
toml = "0.8"

# Observability dependencies
prometheus = "0.13"
opentelemetry = "0.24"
opentelemetry-prometheus = "0.17"

# Wire protocol dependencies
bitflags = { version = "2.4", features = ["serde"] }
ciborium = "0.2"
smallvec = "1.11"
aes-gcm = "0.10"
once_cell = "1.19"
humantime = "2.1"

# Additional TLS dependencies
tokio-rustls = "0.26"
x509-parser = "0.16"

# Supervisor integration dependencies
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
