[package]
name = "redb-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "redb-mesh"
path = "cmd/src/main.rs"

[features]
default = []
tls = ["mesh-session/tls"]

[dependencies]
# Workspace crates
mesh-wire = { path = "wire" }
mesh-session = { path = "session" }
mesh-storage = { path = "storage" }
mesh-routing = { path = "routing" }
mesh-topology = { path = "topology" }
mesh-grpc = { path = "grpc" }

# Workspace dependencies
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
config.workspace = true
toml.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types = "0.13"
clap.workspace = true
humantime.workspace = true

# Additional dependencies for supervisor integration
uuid.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }

# Supervisor integration dependencies  
tonic-reflection.workspace = true

[dev-dependencies]
tempfile = "3.8"