[package]
name = "mesh-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Main binary, bootstrap, lifecycles, and system integration for mesh"

[[bin]]
name = "mesh"
path = "src/main.rs"

[features]
default = []
tls = ["mesh-session/tls"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "fs"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
anyhow.workspace = true
mesh-session = { path = "../session" }
mesh-storage = { path = "../storage" }
mesh-routing = { path = "../routing" }
mesh-topology = { path = "../topology" }
mesh-wire = { path = "../wire" }
mesh-grpc = { path = "../grpc" }
humantime.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
